--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KeepItFresh</title>
+    <link rel="icon" href="img/logo.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -11,28 +12,30 @@
   </head>
   <body>
     <header class="header">
-      <div class="menu container">
-        <a href="#" class="logo">KeepItFresh</a>
-        <nav class="navbar">
-          <ul>
-            <li><a href="#about" data-i18n="menu.about">Acerca</a></li>
-            <li>
-              <a href="#features" data-i18n="menu.features">Características</a>
-            </li>
-            <li><a href="#contact" data-i18n="menu.contact">Contacto</a></li>
-            <li>
-              <select id="language-switcher">
-                <option value="es">Español</option>
-                <option value="en">English</option>
-              </select>
-            </li>
-          </ul>
-        </nav>
-        <div class="icons">
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-instagram"></i>
-        </div>
+      <div class="menu">
+        <div class="container">
+          <a href="#main" class="logo">KeepItFresh</a>
+          <nav class="navbar" id="main">
+            <ul>
+              <li><a href="#about" data-i18n="menu.about">Acerca</a></li>
+              <li>
+                <a href="#features" data-i18n="menu.features">Características</a>
+              </li>
+              <li><a href="#contact" data-i18n="menu.contact">Contacto</a></li>
+              <li>
+                <select id="language-switcher">
+                  <option value="es">Español</option>
+                  <option value="en">English</option>
+                </select>
+              </li>
+            </ul>
+          </nav>
+          <div class="icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div> <!-- Cierra el container -->
       </div>
 
       <div id="slogan" class="header-content container">
@@ -47,29 +50,46 @@
         </div>
       </div>
     </header>
+    <div class="section-1" id="about">
+      <div class="section-content">
+      <div class="esencia">
+        <section class="reveal">
+          <h2 data-i18n="about.title">Nuestra esencia</h2>
+          
+          <p data-i18n="about.desc">
+            Somos una solución inteligente que se encargará de optimizar la
+            gestión de los inventarios de restaurantes. Además de permitir hacer
+            un seguimiento en tiempo real de los productos, evitando así la
+            pérdida de los alimentos. Una solución óptima la cual facilita el
+            proceso de atención al cliente proporcionándole una herramienta fácil
+            y didáctica.
+          </p>
+        </section>
+      </div>
+      <div class="image"><img src="img/logo.png"></div>
+      </div>
+    </div>
 
-    <section id="about" class="reveal">
-      <h2 data-i18n="about.title">Nuestra esencia</h2>
-      <p data-i18n="about.desc">
-        Somos una solución inteligente que se encargará de optimizar la gestión
-        de los inventarios de restaurantes. Además de permitir hacer un
-        seguimiento en tiempo real de los productos, evitando así la pérdida de
-        los alimentos. Una solución óptima la cual facilita el proceso de
-        atención al cliente proporcionándole una herramienta fácil y didáctica.
-      </p>
-    </section>
-
-    <section id="features" class="reveal">
-      <h2 data-i18n="features.title">Características</h2>
-      <ul>
-        <li data-i18n="features.track">Seguimiento en tiempo real</li>
-        <li data-i18n="features.alerts">Alertas y notificaciones.</li>
-        <li data-i18n="features.integration">
-          Manejo de temperatura y fecha de caducidad.
-        </li>
-        <li data-i18n="features.notifications">Gestión del inventario</li>
-      </ul>
-    </section>
+    <div class="section-2" id="features">
+      <div class="caracteristicas">
+        <section class="reveal">
+          <h2 data-i18n="features.title">Características</h2>
+          <ul>
+            <li data-i18n="features.track">Seguimiento en tiempo real</li>
+            <li data-i18n="features.alerts">Alertas y notificaciones.</li>
+            <li data-i18n="features.integration">
+              Manejo de temperatura y fecha de caducidad.
+            </li>
+            <li data-i18n="features.notifications">Gestión del inventario</li>
+          </ul>
+        </section>
+        <div class="images"><img src="img/tracking.png"></div>
+        <div class="images"><img src="img/temperature.png"></div>
+        <div class="images"><img src="img/alert.png"></div>
+        <div class="images"><img src="img/inventory.png"></div>
+      </div>
+    </div>
+      
 
     <section id="contact" class="reveal">
       <h2 data-i18n="contact.title">Contáctanos</h2>
