fixes top index.html and new selector for better scrolling

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="top"></div>
     <header class="header">
       <div class="menu">
         <div class="container">
-          <a href="#main" class="logo">KeepItFresh</a>
+          <a href="#top" class="logo">KeepItFresh</a>
           <nav class="navbar" id="main">
             <ul>
               <li><a href="#about" data-i18n="menu.about">Acerca</a></li>
@@ -35,7 +36,7 @@
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-instagram"></i>
           </div>
-        </div> <!-- Cierra el container -->
+        </div> 
       </div>
 
       <div id="slogan" class="header-content container">
