--- a/index.html
+++ b/index.html
@@ -1,17 +1,47 @@
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KeepItFresh</title>
-    <link rel="icon" href="img/logo.png" type="image/x-icon">
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+
+    <!-- Título SEO -->
+    <title>KeepItFresh | Optimiza tu restaurante con inteligencia</title>
+
+    <!-- Meta Descripción -->
+    <meta name="description" content="KeepItFresh es una solución inteligente para restaurantes que optimiza la gestión de inventario, temperatura y atención al cliente." />
+
+    <!-- Palabras clave -->
+    <meta name="keywords" content="KeepItFresh, gestión de restaurantes, inventario, temperatura, atención al cliente, tecnología para restaurantes" />
+
+    <!-- Autor -->
+    <meta name="author" content="Equipo KeepItFresh" />
+
+    <!-- Robots -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="KeepItFresh | Optimiza tu restaurante con inteligencia" />
+    <meta property="og:description" content="Solución inteligente para gestión de inventario, temperatura y atención al cliente en restaurantes." />
+    <meta property="og:image" content="https://tusitio.com/img/logo.png" />
+    <meta property="og:url" content="https://tusitio.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="KeepItFresh | Optimiza tu restaurante con inteligencia" />
+    <meta name="twitter:description" content="Solución inteligente para restaurantes. Gestión de inventario, temperatura y más." />
+    <meta name="twitter:image" content="https://tusitio.com/img/logo.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/logo.png" type="image/x-icon" />
+
+    <!-- Estilos e íconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="top"></div>
+
     <header class="header">
       <div class="menu">
         <div class="container">
@@ -19,12 +49,10 @@
           <nav class="navbar" id="main">
             <ul>
               <li><a href="#about" data-i18n="menu.about">Acerca</a></li>
-              <li>
-                <a href="#features" data-i18n="menu.features">Características</a>
-              </li>
+              <li><a href="#features" data-i18n="menu.features">Características</a></li>
               <li><a href="#contact" data-i18n="menu.contact">Contacto</a></li>
               <li>
-                <select id="language-switcher">
+                <select id="language-switcher" aria-label="Selector de idioma">
                   <option value="es">Español</option>
                   <option value="en">English</option>
                 </select>
@@ -32,11 +60,11 @@
             </ul>
           </nav>
           <div class="icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-facebook" aria-hidden="true"></i>
+            <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+            <i class="fa-brands fa-instagram" aria-hidden="true"></i>
           </div>
-        </div> 
+        </div>
       </div>
 
       <div id="slogan" class="header-content container">
@@ -51,54 +79,64 @@
         </div>
       </div>
     </header>
-    <div class="section-1" id="about">
-      <div class="section-content">
-      <div class="esencia">
-        <section class="reveal">
-          <h2 data-i18n="about.title">Nuestra esencia</h2>
-          
-          <p data-i18n="about.desc">
-            Somos una solución inteligente que se encargará de optimizar la
-            gestión de los inventarios de restaurantes. Además de permitir hacer
-            un seguimiento en tiempo real de los productos, evitando así la
-            pérdida de los alimentos. Una solución óptima la cual facilita el
-            proceso de atención al cliente proporcionándole una herramienta fácil
-            y didáctica.
-          </p>
-        </section>
-      </div>
-      <div class="image"><img src="img/logo.png"></div>
-      </div>
-    </div>
 
-    <div class="section-2" id="features">
-      <div class="caracteristicas">
-        <section class="reveal">
-          <h2 data-i18n="features.title">Características</h2>
-          <ul>
-            <li data-i18n="features.track">Seguimiento en tiempo real</li>
-            <li data-i18n="features.alerts">Alertas y notificaciones.</li>
-            <li data-i18n="features.integration">
-              Manejo de temperatura y fecha de caducidad.
-            </li>
-            <li data-i18n="features.notifications">Gestión del inventario</li>
-          </ul>
-        </section>
-        <div class="images"><img src="img/tracking.png"></div>
-        <div class="images"><img src="img/temperature.png"></div>
-        <div class="images"><img src="img/alert.png"></div>
-        <div class="images"><img src="img/inventory.png"></div>
+    <main>
+      <div class="section-1" id="about">
+        <div class="section-content">
+          <div class="esencia">
+            <section class="reveal">
+              <h2 data-i18n="about.title">Nuestra esencia</h2>
+              <p data-i18n="about.desc">
+                Somos una solución inteligente que se encargará de optimizar la
+                gestión de los inventarios de restaurantes. Además de permitir hacer
+                un seguimiento en tiempo real de los productos, evitando así la
+                pérdida de los alimentos. Una solución óptima la cual facilita el
+                proceso de atención al cliente proporcionándole una herramienta fácil
+                y didáctica.
+              </p>
+            </section>
+          </div>
+          <div class="image">
+            <img src="img/logo.png" alt="Logo de KeepItFresh" />
+          </div>
+        </div>
       </div>
-    </div>
-      
 
-    <section id="contact" class="reveal">
-      <h2 data-i18n="contact.title">Contáctanos</h2>
-      <form id="form">
-        <input type="email" id="email" placeholder="Correo" />
-        <button type="submit" data-i18n="contact.send">Enviar</button>
-      </form>
-    </section>
+      <div class="section-2" id="features">
+        <div class="caracteristicas">
+          <section class="reveal">
+            <h2 data-i18n="features.title">Características</h2>
+            <ul>
+              <li data-i18n="features.track">Seguimiento en tiempo real</li>
+              <li data-i18n="features.alerts">Alertas y notificaciones.</li>
+              <li data-i18n="features.integration">Manejo de temperatura y fecha de caducidad.</li>
+              <li data-i18n="features.notifications">Gestión del inventario</li>
+            </ul>
+          </section>
+          <div class="images">
+            <img src="img/tracking.png" alt="Seguimiento en tiempo real" />
+          </div>
+          <div class="images">
+            <img src="img/temperature.png" alt="Manejo de temperatura" />
+          </div>
+          <div class="images">
+            <img src="img/alert.png" alt="Alertas y notificaciones" />
+          </div>
+          <div class="images">
+            <img src="img/inventory.png" alt="Gestión del inventario" />
+          </div>
+        </div>
+      </div>
+
+      <section id="contact" class="reveal">
+        <h2 data-i18n="contact.title">Contáctanos</h2>
+        <form id="form">
+          <label for="email" class="visually-hidden">Correo electrónico</label>
+          <input type="email" id="email" placeholder="Correo" aria-label="Correo electrónico" required />
+          <button type="submit" data-i18n="contact.send" aria-label="Enviar formulario">Enviar</button>
+        </form>
+      </section>
+    </main>
 
     <script src="main.js"></script>
   </body>
