add team members space for description

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
           <a href="#top" class="logo">KeepItFresh</a>
           <nav class="navbar" id="main">
             <ul>
+              <li><a href="#aboutus" data-i18n="menu.aboutus">Equipo</a></li>
               <li><a href="#about" data-i18n="menu.about">Acerca</a></li>
               <li>
                 <a href="#features" data-i18n="menu.features"
@@ -106,6 +107,49 @@
     </header>
 
     <main>
+      <div id="aboutus">
+
+        <section class="aboutus">
+          <h1 class="team">ClearView</h1>
+          <section class="cards">
+            <div class="card">
+              <img src="img/marco.jpg">
+              <div class="text">
+                <h2 class="textBackground">Marco Nakasone</h2>
+                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="#">
+              <div class="text">
+                <h2 class="textBackground">Marco Nakasone</h2>
+                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="#">
+              <div class="text">
+                <h2 class="textBackground">Marco Nakasone</h2>
+                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="#">
+              <div class="text">
+                <h2 class="textBackground">Marco Nakasone</h2>
+                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="#">
+              <div class="text">
+                <h2 class="textBackground">Marco Nakasone</h2>
+                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+              </div>
+            </div>
+          </section>
+        </section>
+      </div>
       <div class="section-1" id="about">
         <div class="section-content">
           <div class="esencia">
