update on index style, add new component login

--- a/index.html
+++ b/index.html
@@ -102,49 +102,81 @@
             KeepItFresh es una solución inteligente que optimiza la gestión de
             inventario, temperatura y atención al cliente en restaurantes.
           </p>
+
+          <section class="create-account">
+            <button
+              onclick="window.location.href='components/LoginComponent.html'"
+            >
+              ¡Regístrate ahora!
+            </button>
+          </section>
         </div>
       </div>
     </header>
 
     <main>
       <div id="aboutus">
-
         <section class="aboutus">
           <h1 class="team">ClearView</h1>
           <section class="cards">
             <div class="card">
-              <img src="img/marco.jpg">
+              <img src="img/marco.jpg" />
               <div class="text">
                 <h2 class="textBackground">Marco Nakasone</h2>
-                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+                <p class="textBackground">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  fuga consequatur eligendi animi dolore dolorem blanditiis
+                  rerum ut asperiores, deleniti assumenda aliquam dicta pariatur
+                  soluta voluptatum sint quam laborum id.
+                </p>
               </div>
             </div>
             <div class="card">
-              <img src="#">
+              <img src="#" />
               <div class="text">
                 <h2 class="textBackground">Marco Nakasone</h2>
-                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+                <p class="textBackground">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  fuga consequatur eligendi animi dolore dolorem blanditiis
+                  rerum ut asperiores, deleniti assumenda aliquam dicta pariatur
+                  soluta voluptatum sint quam laborum id.
+                </p>
               </div>
             </div>
             <div class="card">
-              <img src="#">
+              <img src="#" />
               <div class="text">
                 <h2 class="textBackground">Marco Nakasone</h2>
-                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+                <p class="textBackground">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  fuga consequatur eligendi animi dolore dolorem blanditiis
+                  rerum ut asperiores, deleniti assumenda aliquam dicta pariatur
+                  soluta voluptatum sint quam laborum id.
+                </p>
               </div>
             </div>
             <div class="card">
-              <img src="#">
+              <img src="#" />
               <div class="text">
                 <h2 class="textBackground">Marco Nakasone</h2>
-                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+                <p class="textBackground">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  fuga consequatur eligendi animi dolore dolorem blanditiis
+                  rerum ut asperiores, deleniti assumenda aliquam dicta pariatur
+                  soluta voluptatum sint quam laborum id.
+                </p>
               </div>
             </div>
             <div class="card">
-              <img src="#">
+              <img src="#" />
               <div class="text">
                 <h2 class="textBackground">Marco Nakasone</h2>
-                <p class="textBackground">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas fuga consequatur eligendi animi dolore dolorem blanditiis rerum ut asperiores, deleniti assumenda aliquam dicta pariatur soluta voluptatum sint quam laborum id.</p>
+                <p class="textBackground">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  fuga consequatur eligendi animi dolore dolorem blanditiis
+                  rerum ut asperiores, deleniti assumenda aliquam dicta pariatur
+                  soluta voluptatum sint quam laborum id.
+                </p>
               </div>
             </div>
           </section>
