add Pedro's photo

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="#" />
+              <img src="img/pedro.jpg" />
               <div class="text">
                 <h2 class="textBackground">Marco Nakasone</h2>
                 <p class="textBackground">
