--- a/index.html
+++ b/index.html
@@ -59,12 +59,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="top"></div>
 
     <header class="header">
       <div class="menu">
+        <div class="hamburger" id="hamburger">
+          <i class="fas fa-bars"></i>
+        </div>
         <div class="container">
           <a href="#top" class="logo">KeepItFresh</a>
           <nav class="navbar" id="main">
@@ -76,7 +83,6 @@
                   >Características</a
                 >
               </li>
-              <li><a href="#contact" data-i18n="menu.contact">Contacto</a></li>
               <li>
                 <select id="language-switcher" aria-label="Selector de idioma">
                   <option value="es">Español</option>
@@ -144,7 +150,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="#" />
+              <img src="img/airton.jpg" />
               <div class="text">
                 <h2 class="textBackground">Marco Nakasone</h2>
                 <p class="textBackground">
@@ -230,29 +236,8 @@
           </div>
         </div>
       </div>
-
-      <section id="contact" class="reveal">
-        <h2 data-i18n="contact.title">Contáctanos</h2>
-        <form id="form">
-          <label for="email" class="visually-hidden">Correo electrónico</label>
-          <input
-            type="email"
-            id="email"
-            placeholder="Correo"
-            aria-label="Correo electrónico"
-            required
-          />
-          <button
-            type="submit"
-            data-i18n="contact.send"
-            aria-label="Enviar formulario"
-          >
-            Enviar
-          </button>
-        </form>
-      </section>
     </main>
 
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
   </body>
 </html>
