fixes on en.json and es.json

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
                     <h2 data-i18n="about.values_title" class="subtitle">Valores</h2>
                     <div class="text">
                         <ul class="textBackground">
-                            <li data-i18n="about.values_innovation"><strong>1.Innovación:</strong> Evolucionamos constantemente con el sector gastronómico.</li>
-                            <li data-i18n="about.values_accessibility"><strong>2.Accesibilidad:</strong> Calidad a precios justos.</li>
-                            <li data-i18n="about.values_customer_focus"><strong>3.Orientación al cliente:</strong> Soluciones prácticas y fáciles.</li>
-                            <li data-i18n="about.values_quality"><strong>4.Calidad:</strong> Altos estándares en todo.</li>
-                            <li data-i18n="about.values_responsibility"><strong>5.Responsabilidad:</strong> Sostenibilidad y menos desperdicio.</li>
+                            <li data-i18n="about.values_innovation">1.Innovación: Evolucionamos constantemente con el sector gastronómico.</li>
+                            <li data-i18n="about.values_accessibility">2.Accesibilidad: Calidad a precios justos.</li>
+                            <li data-i18n="about.values_customer_focus">3.Orientación al cliente: Soluciones prácticas y fáciles.</li>
+                            <li data-i18n="about.values_quality">4.Calidad: Altos estándares en todo.</li>
+                            <li data-i18n="about.values_responsibility">5.Responsabilidad: Sostenibilidad y menos desperdicio.</li>
                         </ul>
                     </div>
                     <img src="img/valores.png" class="values" alt="Valores">
