--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
           <section class="create-account">
             <button
-              onclick="window.location.href='components/RegisterComponent.html'"
               data-i18n="slogan.register"
             >
+            <a href="https://keepitfresh-frontend-1huq8h1os-marquinho04s-projects.vercel.app/alerts/sensor-alerts"></a>
               ¡Regístrate ahora!
             </button>
           </section>
