fix: fix on call to action button and hamburger menu.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
           <a href="#top" class="logo" data-i18n="title">KeepItFresh</a>
           <nav class="navbar" id="main">
-            <ul>
+            <ul id="navbar-list">
               <li><a href="#aboutus" data-i18n="menu.aboutus">Equipo</a></li>
               <li><a href="#about" data-i18n="menu.about">Acerca</a></li>
               <li>
@@ -116,12 +116,12 @@
           </p>
 
           <section class="create-account">
-            <button
-              data-i18n="slogan.register"
-            >
-            <a href="https://keepitfresh-frontend-1huq8h1os-marquinho04s-projects.vercel.app/alerts/sensor-alerts"></a>
-              ¡Regístrate ahora!
-            </button>
+          <button
+  onclick="window.location.href='https://keepitfresh-frontend-k2ef.vercel.app/'"
+  data-i18n="slogan.register"
+>
+  ¡Regístrate ahora!
+</button>
           </section>
         </div>
       </div>
